Glossary Update
